--- a/spark_postgres_script.ipynb
+++ b/spark_postgres_script.ipynb
@@ -157,7 +157,7 @@
       },
       "outputs": [],
       "source": [
-        "search_terms_relevance = df.groupBy('file_name').agg(sum((1.5 * col('forks') + 1.32 * col('subscribers') + 1.04 * col('stars'))).alias('count_of_stars')).sort(desc('count_of_stars'))"
+        "search_terms_relevance = df.groupBy('file_name').agg(sum((1.5 * col('forks') + 1.32 * col('subscribers') + 1.04 * col('stars'))).alias('relevance score')).sort(desc('count_of_stars'))"
       ]
     },
     {
